# Agrecology_analysis

./: .gitattributes  .gitignore  LICENSE  README.md  README_NEW.md  activate_env.ps1  analysis_pipeline.py  app.py  pipeline_cli.py  pyproject.toml  requirements.txt  run_app.bat  setup_env.ps1
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md
src/agrecology/: __init__.py  cld_utils.py  cli.py  constants.py  data_loader.py  posthoc_tests.py  statistical_analysis.py  visualization.py
