[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrecology-analysis"
version = "1.0.0"
description = "Statistical analysis toolkit for agronomy data with Streamlit UI and CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Agrecology Team", email = "info@agrecology.dev" }
]
keywords = ["agronomy", "statistics", "ANOVA", "data-analysis", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-posthocs>=0.11.4",
    "plotly>=5.24.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agrecology-analysis"
Repository = "https://github.com/yourusername/agrecology-analysis.git"
Documentation = "https://github.com/yourusername/agrecology-analysis/tree/main/docs"
Issues = "https://github.com/yourusername/agrecology-analysis/issues"

[project.scripts]
agrecology = "agrecology.cli:main"

[tool.setuptools]
packages = ["agrecology"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src/agrecology --cov-report=html --cov-report=term"
